# CRM-Agent

./: .gitignore  Claud.MD  config.yaml.example  pyproject.toml
Agents/: email-specialist.md  schema-guardian.md
Skills/: Add-record.md  Commit.MD  Preview-notification.md  Simulate-gate.md
src/: models.py
src/agents/: context_linker.py  draft_writer.py  review_analyst.py  sheets_reader.py
tests/: test_context_linker.py  test_draft_writer.py  test_review_analyst.py  test_sheets_reader.py
